<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vibracon</string>
    <string name="action_settings">Settings</string>
    <string name="duration_label">Duration</string>
    <string name="duration_field_hint">Enter duration</string>
    <string name="start_vibration_button">Start Vibration</string>
    <string name="stop_vibration_button">Stop Vibration</string>
    <string name="pauses_label">Pauses</string>
    <string name="pauses_field">Enter Pauses</string>
    <string name="repeat_label">Repeat</string>
    <string name="repeat_field">Enter Repeats</string>
    <string name="strike_duration_field">Strike Duration</string>
    <string name="strikes_label">Strikes</string>
    <string name="options_label">Change options</string>
    
    <string-array name="unit_choices">
        <item >sec</item>
        <item >ms</item>
    </string-array>
    
    <string-array name="vibration_options">
        <item >Normal</item>
        <item >Pattern</item>
    </string-array>
    
	<string name="MY_AD_UNIT_ID">ca-app-pub-1060236991679345/8734698986</string>
    
	<string name="background_desc">This is the background</string>

</resources>
