<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" android:id="@+id/patternLayout" >

    <TextView
        android:id="@+id/lengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/strikes_label" />

    <EditText
        android:id="@+id/strikeField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lengthText"
        android:layout_below="@+id/lengthText"
        android:ems="10"
        android:hint="@string/duration_field_hint"
        android:inputType="number" />

    <Spinner
        android:id="@+id/strikesUnitSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pausesLabel"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/lengthText"
        android:layout_toRightOf="@+id/strikeField"
        android:entries="@array/unit_choices" />

    <TextView
        android:id="@+id/pausesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/strikeField"
        android:text="@string/pauses_label" />

    <EditText
        android:id="@+id/pauseField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pausesLabel"
        android:layout_below="@+id/pausesLabel"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/pauses_field"/>

    <CheckBox
        android:id="@+id/repeatCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pauseField"
        android:layout_below="@+id/pauseField"
        android:layout_marginLeft="19dp"
        android:text="@string/repeat_label" />

    <Button
        android:id="@+id/patternButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pauseField"
        android:layout_below="@+id/repeatCheckBox"
        android:text="@string/start_vibration_button" />

    <Spinner
        android:id="@+id/pausesUnitSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/repeatCheckBox"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/pausesLabel"
        android:layout_toRightOf="@+id/strikeField"
        android:entries="@array/unit_choices" />

</RelativeLayout>
