<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" android:id="@+id/normalLayout" >

    <TextView
        android:id="@+id/lengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/duration_label" />

    <EditText
        android:id="@+id/durationField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lengthText"
        android:layout_below="@+id/lengthText"
        android:ems="10"
        android:hint="@string/duration_field_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/durationField"
        android:text="@string/start_vibration_button" />

    <Spinner
        android:id="@+id/strikesUnitSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startButton"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/lengthText"
        android:layout_toRightOf="@+id/durationField"
        android:entries="@array/unit_choices" />

</RelativeLayout>
