<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    style="@style/MainContainerStyle" android:background="@android:color/white" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_desc"
        android:scaleType="fitStart"
        android:src="@drawable/new_background" android:visibility="invisible" />

    <TextView
        android:id="@+id/optionsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/options_label" />

    <Spinner
        android:id="@+id/optionsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/optionsLabel"
        android:layout_below="@+id/optionsLabel"
        android:entries="@array/vibration_options" />

    <LinearLayout
        android:id="@+id/hostLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/optionsSpinner"
        android:orientation="vertical" >
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignBottom="@id/hostLayout"
        ads:adSize="BANNER"
        ads:adUnitId="@string/MY_AD_UNIT_ID" >
    </com.google.android.gms.ads.AdView>

</RelativeLayout>